--- a/brain/ui/index.html
+++ b/brain/ui/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🧠 Brain Agent Console</h1>
-            <p class="subtitle">Ross MBA Assistant</p>
+            <h1>Join or Die
+            </h1>
+            <p class="subtitle">Jeeves</p>
         </div>
         
         <div class="chat-container">
